test/invalidwiki/Испорченный конфиг/__page.text
sdklhf skd sdf
'
sdfsdfgdfg
dfgdfgdg
dgdg